--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -1,22 +1,32 @@
-name: Python application
+name: Python application - MyPy
 
-on: [push]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
+    name: Python ${{ matrix.python-version }} sample
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+    - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
       with:
-        python-version: 3.8
-    - name: Install dependencies
+        python-version: ${{matrix.python-version}}
+
+    - name: Install poetry
       run: |
         python -m pip install --upgrade pip poetry
         poetry install
-    - name: Test typing with mypy
+
+    - name: Test with MyPy
       run: |
         poetry run mypy .
