--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyipasnhistory"
-version = "2.1.2"
+version = "2.1.3"
 description = "Python client for IP ASN History"
 authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
 license = "AGPL"
@@ -19,28 +19,25 @@ classifiers = [
     'Intended Audience :: Telecommunications Industry',
     'Intended Audience :: Information Technology',
     'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.8',
     'Topic :: Security',
     'Topic :: Internet',
 ]
-
-include = ['README.md']
 
 [tool.poetry.scripts]
 ipasnhistory = "pyipasnhistory:main"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-requests = "^2.28.1"
-Sphinx = { version = "^5.3.0", optional = true }
+python = "^3.9"
+requests = "^2.32.3"
+Sphinx = { version = "^8.1.3", python = ">=3.10", optional = true }
 
 [tool.poetry.dev-dependencies]
-mypy = "^0.991"
-types-requests = "^2.28.11.7"
+mypy = "^1.13.0"
+types-requests = "^2.32.0.20241016"
 
 [tool.poetry.extras]
 docs = ["Sphinx"]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
